--- a/app/src/main/res/layout/activity_makeroom.xml
+++ b/app/src/main/res/layout/activity_makeroom.xml
@@ -205,7 +205,14 @@
                     android:text="시간"/>
             </RadioGroup>
 
+            <TextView
+                android:id="@+id/tv_result"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="결과"/>
         </LinearLayout>
+
+
 
     </LinearLayout>
 
