--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -52,41 +52,7 @@
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/tv_pname"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="이름: -" />
 
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/profileEdit"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="프로필 편집"
-        android:textColor="#000000"
-        android:textStyle="bold"
-        android:background="@drawable/btn_stroke"
-        android:layout_marginHorizontal="20dp"/>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical">
-
-        <EditText
-            android:id="@+id/et_pnick"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="사용할 닉네임을 입력해주세요." />
-
-        <Button
-            android:id="@+id/bt_save"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="프로필 저장" />
 
 
         <TextView
@@ -94,6 +60,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="레벨: 0" />
+
+        <TextView
+            android:id="@+id/tv_pname"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView" />
 
 
     </LinearLayout>
