--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -15,8 +15,7 @@
     <ImageButton
         android:id="@+id/imageButtonStart"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-         />
+        android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/buttonQuit"
