--- a/app/src/main/res/layout/fragment_weekly.xml
+++ b/app/src/main/res/layout/fragment_weekly.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -54,4 +54,4 @@
         android:layout_weight="1"
         tools:srcCompat="@tools:sample/avatars" />
 
-</LinearLayout>
+</RelativeLayout>
