--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -32,7 +32,7 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="25dp"
         android:layout_marginBottom="0dp"
-        android:background="#ECEBEB"
+        android:background="@drawable/background_gray"
         android:orientation="vertical">
 
         <EditText
