--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,8 +8,54 @@
 
     </style>
 
-    <style name="makeFontStyle">
+    <style name="make_Title">
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">18dp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    <style name="make_Big">
         <item name="android:textColor">@android:color/black</item>
         <item name="android:textSize">12dp</item>
+    </style>
+    <style name="make_Sub">
+        <item name="android:textColor">#444444</item>
+        <item name="android:textSize">10dp</item>
+    </style>
+    <style name="make_Sub_Unselected">
+        <item name="android:textColor">@color/inactiveText</item>
+        <item name="android:textSize">10dp</item>
+    </style>
+    <style name="make_Sub_Selected">
+        <item name="android:textColor">@color/activeText</item>
+        <item name="android:textSize">10dp</item>
+    </style>
+    <style name="make_Sub2">
+        <item name="android:textColor">@color/subText</item>
+        <item name="android:textSize">8dp</item>
+    </style>
+    <style name="make_Time">
+        <item name="android:textColor">@color/impoRed</item>
+        <item name="android:textSize">12dp</item>
+    </style>
+    <style name="make_Time_off">
+        <item name="android:textColor">@color/subText</item>
+        <item name="android:textSize">12dp</item>
+    </style>
+    <style name="Switch1" parent="Theme.AppCompat.Light">
+        <!-- active thumb & track color (30% transparency) -->
+        <item name="colorControlActivated">@color/honeyYellow</item>
+
+        <!-- inactive thumb color -->
+        <item name="colorSwitchThumbNormal">@color/lightlightGray
+        </item>
+
+        <!-- inactive track color (30% transparency) -->
+        <item name="android:colorForeground">@color/transparentGray
+        </item>
+    </style>
+    <style name="RadioStyle" parent="Theme.AppCompat.Light">
+        <item name="colorControlActivated">@color/honeyYellow</item>
+        <item name="colorSwitchThumbNormal">@color/lightlightGray
+        </item>
     </style>
 </resources>
