--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -48,6 +48,11 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="detail_text">
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">15dp</item>
+    </style>
+
     <style name="Switch1" parent="Theme.AppCompat.Light">
         <!-- active thumb & track color (30% transparency) -->
         <item name="colorControlActivated">@color/honeyYellow</item>
@@ -72,17 +77,5 @@
     <style name = "font_study_name">
         <item name = "android:textSize">25dp</item>
         <item name = "android:textColor">#ffffff</item>
-    </style>
-    <style name = "btn_style">
-        <item name = "android:textSize">15dp</item>
-        <item name = "android:textColor">#ffffff</item>
-        <item name = "android:minHeight">0dp</item>
-        <item name = "android:layout_marginVertical">5dp</item>
-        <item name = "android:paddingHorizontal">14dp</item>
-    </style>
-
-    <style name="weekly">
-        <item name="android:textColor">@android:color/black</item>
-        <item name="android:textSize">15dp</item>
     </style>
 </resources>
