--- a/app/src/main/res/layout/activity_photo_stat.xml
+++ b/app/src/main/res/layout/activity_photo_stat.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:textColor="#FFFFFF"
-            android:text="내 공부량"
+            android:text="내 학습량"
             android:fontFamily="@font/maplestorylight"
             android:textSize="30sp"/>
 
@@ -62,6 +62,5 @@
         android:layout_height="match_parent"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/maplestorylight"/>
-
 
 </LinearLayout>
