--- a/app/src/main/res/layout/singlerowdesign.xml
+++ b/app/src/main/res/layout/singlerowdesign.xml
@@ -7,7 +7,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#E0E0E0">
+        android:background="?attr/selectableItemBackground">
 
         <TextView
             android:id="@+id/text_1"
