--- a/app/src/main/res/layout/single_room_design.xml
+++ b/app/src/main/res/layout/single_room_design.xml
@@ -4,20 +4,11 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="5dp">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackground"
         >
-
-        <TextView
-            android:id="@+id/text_index"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginBottom="5dp"/>
 
         <TextView
             android:id="@+id/studyroomname"
@@ -27,7 +18,8 @@
             android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp"
-            android:layout_toRightOf="@+id/text_index"
+            android:layout_weight="1"
+            android:gravity="left"
             android:text="스터디룸명" />
 
         <TextView
@@ -38,7 +30,8 @@
             android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp"
-            android:layout_toRightOf="@+id/studyroomname"
+            android:layout_weight="1"
+            android:gravity="center"
             android:text="꿀" />
 
         <TextView
@@ -46,13 +39,13 @@
             android:layout_width="82dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
-            android:layout_marginLeft="61dp"
+            android:gravity="right"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp"
-            android:layout_toRightOf="@+id/ggul"
+            android:layout_weight="1"
             android:text=" 일째" />
 
-    </RelativeLayout>
+    </LinearLayout>
 
 </androidx.cardview.widget.CardView>
