--- a/app/src/main/res/layout/singlerowdesign.xml
+++ b/app/src/main/res/layout/singlerowdesign.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="5dp">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackground">
@@ -17,7 +17,10 @@
             android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp"
-            android:text="Your room name" />
+            android:layout_gravity="center"
+            android:gravity="left"
+            android:layout_weight="1"
+            android:text="스터디룸명" />
 
         <TextView
             android:id="@+id/text_2"
@@ -27,7 +30,10 @@
             android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp"
+            android:layout_gravity="center"
+            android:gravity="center"
             android:layout_toRightOf="@+id/text_1"
+            android:layout_weight="1"
             android:text="room info" />
 
         <TextView
@@ -39,15 +45,11 @@
             android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp"
-            android:layout_toRightOf="@+id/text_2"
+            android:layout_gravity="center"
+            android:gravity="right"
+            android:layout_weight="1"
             android:text=" 명" />
 
-        <ImageView
-            android:layout_width="27dp"
-            android:layout_height="20dp"
-            android:layout_marginLeft="69dp"
-            android:layout_toRightOf="@+id/text_3" />
-
-    </RelativeLayout>
+    </LinearLayout>
 
 </androidx.cardview.widget.CardView>
